MDEV-6395: Make ANALYZE UPDATE/DELETE handle the degenerate query plans.